--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Understanding TypeScript</title>
-    <script src="js/scripts.js" defer></script>
+    <script src="js/app.js" defer></script>
   </head>
   <body>
     <input type="text" name="" id="num1" placeholder="Enter Number 1" />
