--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Understanding TypeScript</title>
     <script src="js/app.js" defer></script>
+    <script src="js/analytics.js" defer></script>
   </head>
   <body>
-    <input type="text" name="" id="num1" placeholder="Enter Number 1" />
+    <!-- <input type="text" name="" id="num1" placeholder="Enter Number 1" />
     <input type="text" name="" id="num2" placeholder="Enter Number 2" />
-    <button>Add</button>
+    <button>Add</button> -->
+    <button>Click</button>
   </body>
 </html>
