--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Understanding TypeScript</title>
-    <script src="js/app.js" defer></script>
-    <script src="js/analytics.js" defer></script>
+    <script src="dist/app.js" defer></script>
+    <script src="dist/analytics.js" defer></script>
   </head>
   <body>
     <!-- <input type="text" name="" id="num1" placeholder="Enter Number 1" />
