feat: Type casting, Index properties and function overloading

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <!-- <input type="text" name="" id="num1" placeholder="Enter Number 1" />
     <input type="text" name="" id="num2" placeholder="Enter Number 2" />
     <button>Add</button> -->
-    <button>Click</button>
+    <!-- <button>Click</button> -->
+
+    <!-- TypeCasting Example  -->
+    <!-- <p id="message-output"></p> -->
+    <input type="text" id="user-input" />
   </body>
 </html>
