feat: Working on Decorators - Part 2

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 
     <!-- TypeCasting Example  -->
     <!-- <p id="message-output"></p> -->
-    <input type="text" id="user-input" />
+    <!-- <input type="text" id="user-input" /> -->
+
+    <!-- Example for Decorators  -->
+    <div id="app"></div>
   </body>
 </html>
