feat: Autobind decorator updation

--- a/index.html
+++ b/index.html
@@ -19,5 +19,8 @@
 
     <!-- Example for Decorators  -->
     <div id="app"></div>
+
+    <!-- Example for Autobind decorator  -->
+    <button>Click Me</button>
   </body>
 </html>
