feat: Validation with Decorators

--- a/index.html
+++ b/index.html
@@ -22,5 +22,15 @@
 
     <!-- Example for Autobind decorator  -->
     <button>Click Me</button>
+    <br />
+    <br />
+    <br />
+
+    <!-- Valdiation with Decorators - Example  -->
+    <form action="">
+      <input type="text" placeholder="Course title" id="title" />
+      <input type="text" placeholder="Course price" id="price" />
+      <button type="submit">Save</button>
+    </form>
   </body>
 </html>
